--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,7 @@ project(pyflame2)
 set(PYFLAME2_SOURCE
         src/aslr.cc
         src/frame.cc
-        src/frob.cc
-        src/frob26.cc
-        src/frob34.cc
-        src/frob36.cc
+        src/frob37.cc
         src/namespace.cc
         src/posix.cc
         src/prober.cc
@@ -31,7 +28,7 @@ set(PYFLAME2_HEADER
         src/symbol.h
         src/thread.h src/frob37.cc)
 
-find_package (Python3 COMPONENTS Interpreter Development)
+find_package (Python3 3.7 EXACT COMPONENTS Interpreter Development)
 
 if(Python3_FOUND)
     message("Found python, version: ${Python3_VERSION}, include dir ${Python3_INCLUDE_DIRS}")
@@ -39,4 +36,5 @@ endif()
 
 add_executable(pyflame2 ${PYFLAME2_SOURCE} ${PYFLAME2_HEADER})
 target_include_directories(pyflame2 PRIVATE ${Python3_INCLUDE_DIRS})
+add_compile_definitions(pyflame2 PRIVATE ENABLE_PY37 PYFLAME_VERSION_STR=pyflame2 PYFLAME_PY_VERSION=37 USE_ELF64 ENABLE_THREADS)
 
